<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:id="@+id/rootLayout"
    android:gravity="center|top"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <EditText
        android:id="@+id/etEmail"
        android:ems="10"
        android:hint="Email"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:drawableTint="@color/purple_200"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="Password"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/purple_200"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnLogin"
        android:text="LOGIN"
        android:layout_marginTop="15dp"
        android:ems="10"
        app:cornerRadius = "20dp"
        android:backgroundTint="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvForgotPass"
            android:text="Forgot Password?"
            android:textSize="16sp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/purple_200"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvSignup"
            android:text="Create Account"
            android:textSize="16sp"
            android:gravity="end"
            android:textColor="@color/purple_200"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>