<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardActivity">

<!--    <TextView-->
<!--        android:id="@+id/tvResult"-->
<!--        android:text="Hi, User"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--/>-->
    <LinearLayout
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_above="@id/botomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botomNav"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_bottom_nav"
        app:menu="@menu/nav_bottom" />

</RelativeLayout>